--- a/LaTeX-Cheatsheet/LaTeX-Cheatsheet.tex
+++ b/LaTeX-Cheatsheet/LaTeX-Cheatsheet.tex
@@ -3,6 +3,8 @@
 \usepackage{csquotes}
 \usepackage{empheq}
 \usepackage{float}
+\usepackage{graphicx}
+\graphicspath{ {./files/} }
 \usepackage{hyperref}
 \usepackage{listings}
 \lstset{basicstyle=\ttfamily\footnotesize,breaklines=true}
@@ -155,6 +157,39 @@ This is a reference to table \ref{table:lists_sets_comp}
   \caption{Truth table for $p \rightarrow q$}
 \end{table}
 
+\begin{table}[H]
+  \centering
+  \begin{tabular}{|c|c||c|ll}
+    \cline{1-3}
+    p & q & $p \rightarrow q$ &  & \\ [1ex] \cline{1-3}
+    F & F & T                 &  & \\ [0.5ex] \cline{1-3}
+    F & T & T                 &  & \\ [0.5ex] \cline{1-3}
+    T & F & F                 &  & \\ [0.5ex] \cline{1-3}
+    T & T & T                 &  & \\ [0.5ex] \cline{1-3}
+  \end{tabular}
+  \caption{Truth table for $p \rightarrow q$}
+\end{table}
+
+% =============================================================================
+\section{Vertical/column multiplication}
+% =============================================================================
+
+\begin{tabular}{ccccccccccc}
+           &   &   &   & 1 & 0 & 1 & 1 &  & multiplicant   \\
+  $\times$ &   &   &   & 1 & 0 & 0 & 1 &  & multiplier     \\
+  \hline
+           &   &   &   & 1 & 0 & 1 & 1 &  & $\leftarrow$ 1 \\
+  $+$      &   &   & 0 & 0 & 0 & 0 &   &  & $\leftarrow$ 0 \\
+  \hline
+           &   &   & 0 & 1 & 0 & 1 & 1 &  &                \\
+  $+$      &   & 0 & 0 & 0 & 0 &   &   &  & $\leftarrow$ 0 \\
+  \hline
+           &   & 0 & 0 & 1 & 0 & 1 & 1 &  &                \\
+  $+$      & 1 & 0 & 1 & 1 &   &   &   &  & $\leftarrow$ 1 \\
+  \hline
+           & 1 & 1 & 0 & 0 & 0 & 1 & 1 &  &                \\
+\end{tabular}
+
 % =============================================================================
 \section{Pseudocode}
 % =============================================================================
@@ -251,5 +286,55 @@ Below is a 4cm long line
 Below is a 8cm long line
 
 \noindent\rule{8cm}{0.4pt}
+
+% =============================================================================
+\section{Inserting and manipulating an image}
+% =============================================================================
+
+The image of the original scale:
+
+\includegraphics{image-1.png}
+
+The image of 1.5 times of the original scale:
+
+\includegraphics[scale=1.5]{image-1.png}
+
+The image of 0.5 times of the original scale:
+
+\includegraphics[scale=0.5]{image-1.png}
+
+Scale the image by setting the width and height:
+
+\includegraphics[width=5in,height=1in]{image-1.png}
+
+Rotate the image by 45 degrees:
+
+\includegraphics[angle=45]{image-1.png}
+
+Crop the image (must use ``includegraphics*''):
+
+\includegraphics*[viewport=30 30 130 130]{image-1.png}
+
+Shift the image to the new position (using ``includegraphics''):
+
+\includegraphics[viewport=80 80 130 130]{image-1.png}
+
+Flip the image horizontally:
+
+\reflectbox{\includegraphics{image-1.png}}
+
+Center the image:
+
+\begin{center}
+  \includegraphics{image-1.png}
+\end{center}
+
+% =============================================================================
+\section{Manipulating text}
+% =============================================================================
+
+Rotate and scale the text:
+
+\scalebox{2}{\rotatebox{60}{\reflectbox{This is really weird text!}}}
 
 \end{document}
